--- a/medial-queries1/index.html
+++ b/medial-queries1/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div class="container">
-      <div class="a"></div>
-      <div class="b"></div>
-      <div class="c"></div>
+    <div class="container" id="wrap">
+      <header class="a"></header>
+      <main class="b"></main>
+      <footer class="c"></footer>
     </div>
   </body>
 </html>
